# second-hospital-mastitis

./: .env.example  .gitignore  RAG_SCOPE.md  README.md  pyproject.toml
configs/: embedding.yaml  llm.yaml  queries.yaml  sources.yaml
notebooks/: README.md
outputs/: data_availability_checklist.md  endpoint_definitions.md  initial_rag_questions.md
scripts/: animal_filter.sh  bootstrap_server.sh  build_abstract_chunks.sh  build_embeddings.sh  build_faiss_index.sh  build_strict_index.sh  combine_rag_chunks.sh  evaluate_answer.sh  fetch_pmc_articles.sh  filter_corpus.sh  generate_answer.sh  merge_registry.sh  parse_pmc_xml.sh  rag_answer.sh  run_pubmed_searches.sh  search_chunks.sh  semantic_chunk_articles.sh  upload_from_windows.ps1
src/rag_medical/: __init__.py  abstract_chunks.py  animal_filter.py  animal_rules.py  build_embeddings.py  build_faiss_index.py  combine_chunks.py  eval_judge.py  eval_rules.py  evaluate_answer.py  fetch_pmc_articles.py  filter_corpus.py  generate_answer.py  merge_registry.py  parse_pmc_xml.py  rag_answer.py  schema.py  search_chunks.py  search_pubmed.py  semantic_chunk.py
tests/: test_abstract_chunks.py  test_animal_filter.py  test_build_embeddings.py  test_eval_judge.py  test_eval_rules.py  test_evaluate_answer.py  test_faiss_retrieval.py  test_filter_corpus.py  test_generate_answer.py  test_merge_registry.py  test_rag_answer.py  test_search_pubmed.py  test_semantic_chunk.py
